animation is done

--- a/104m_adaptive/index.html
+++ b/104m_adaptive/index.html
@@ -40,15 +40,15 @@
                 <div class="bday-block">
                     <span class="bday-advice">Укажите свою дату рождения: </span>
                     <div class="bday-wrapper">
-                    <select name="bday" id="bday">
-                        <option value selected disabled>ДД</option>
-                    </select>
-                    <select name="bmonth" id="bmonth">
-                        <option value selected disabled>МММ</option>
-                    </select>
-                    <select name="byear" id="byear">
-                        <option value selected disabled>ГГГГ</option>
-                    </select>
+                        <select name="bday" id="bday">
+                            <option value selected disabled>ДД</option>
+                        </select>
+                        <select name="bmonth" id="bmonth">
+                            <option value selected disabled>МММ</option>
+                        </select>
+                        <select name="byear" id="byear">
+                            <option value selected disabled>ГГГГ</option>
+                        </select>
                     </div>
                     <span class="bday-error">Пожалуйста, укажите свою дату</span>
                 </div>
@@ -71,24 +71,146 @@
             <div class="container-desktop">
                 <div class="logo"><a href="#"><img src="" alt="logo"></a></div>
                 <div class="registration">
-                    Уже зарегистрированы? <a href="#">Войти</a>
+                    Уже зарегистрированы? <a class="enter" href="#">Войти</a>
                 </div>
             </div>
         </header>
         <main class="container-desktop">
             <div class="photos-wrapper">
                 <div class="photos">
-                    <img class="container" src="images/11@3x.jpg" alt="bae">
-                    <div class="photos-buttons container">
-                        <button class="star-icon"></button>
-                        <button class="message-icon"></button>
-                        <button class="photo-icon"></button>
+                    <div class="images-block container">
+                        <div class="image-wrapper last-image"><img class="lower-photo" src="images/11@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/10@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/09@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/08@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/07@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/06@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/05@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/04@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/03@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper"><img class="lower-photo" src="images/02@3x.jpg" alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class="image-wrapper first-image current-partner"><img class="lower-photo" src="images/01@3x.jpg"
+                                                                    alt="bae">
+                            <div class="photos-buttons">
+                                <button class="star-icon"></button>
+                                <button class="message-icon"></button>
+                                <button class="photo-icon"></button>
+                            </div>
+                        </div>
+                        <div class=" hidden-image"><img class="lower-photo" src="images/11.png"
+                                                                     alt="bae">
+                        </div>
                     </div>
+                    <!--<div class="photos-buttons container">-->
+                    <!--<button class="star-icon"></button>-->
+                    <!--<button class="message-icon"></button>-->
+                    <!--<button class="photo-icon"></button>-->
+                    <!--</div>-->
                 </div>
             </div>
             <div class="right-column">
-                <div class="photos-description container">
-                    <span class="name">dianchik</span>
+                <div class="photos-description active-description photos-description-hidden container">
+                    <span class="name">k0ketka</span>
+                    <span class="name-info">23, Саратов</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Дарья</span>
+                    <span class="name-info">26, Мурманск</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Юльчик</span>
+                    <span class="name-info">24, Воронеж</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Ксю</span>
+                    <span class="name-info">34, Краснодар</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Вера</span>
+                    <span class="name-info">29, Калининград</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Надежда</span>
+                    <span class="name-info">37, Омск</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Любовь</span>
+                    <span class="name-info">37, Сыктывкар</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Снежанна</span>
+                    <span class="name-info">27, Сочи</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">k0nfetka</span>
+                    <span class="name-info">31, Уфа</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">Катюшка</span>
+                    <span class="name-info">28, Санкт-Петербург</span>
+                </div>
+                <div class="photos-description photos-description-hidden container">
+                    <span class="name">dian4ik</span>
                     <span class="name-info">35, Москва</span>
                 </div>
                 <div class="buttons container">
@@ -117,7 +239,7 @@
             <div class="liked">
                 <img src="images/shape.svg" alt="Arrow">
                 <span>Мне<br>Понравились
-                </span>
+            </span>
 
             </div>
         </div>
