footer logic is done

--- a/104m_adaptive/index.html
+++ b/104m_adaptive/index.html
@@ -230,11 +230,11 @@
     <footer>
         <div class="container-desktop">
             <div class="liked-photos-wrapper">
-                <div class="liked-photos"><img src="" alt=""></div>
-                <div class="liked-photos"><img src="" alt=""></div>
-                <div class="liked-photos"><img src="" alt=""></div>
-                <div class="liked-photos"><img src="" alt=""></div>
-                <div class="liked-photos"><img src="" alt=""></div>
+                <div class="liked-photos"><img src="" alt="girl"></div>
+                <div class="liked-photos"><img src="" alt="girl"></div>
+                <div class="liked-photos"><img src="" alt="girl"></div>
+                <div class="liked-photos"><img src="" alt="girl"></div>
+                <div class="liked-photos"><img src="" alt="girl"></div>
             </div>
             <div class="liked">
                 <img src="images/shape.svg" alt="Arrow">
