--- a/104m_adaptive/index.html
+++ b/104m_adaptive/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
 <div class="wrapper">
+    <div class="preloader">
+        <span class="preloader-animation"></span>
+    </div>
     <div class="registration-form-wrapper">
         <button class="close"></button>
         <div class="registration-form">
